# ElevenLabs-X-MCP

./: .gitignore  Dockerfile  LICENCE  README.md  check.py  docker-compose.yml  lint.cmd  main.py  pyproject.toml
authentication/: generate_key.py
notebooks/: generate_token.ipynb  ping.py  time_formats.ipynb  to_base64.ipynb
src/: auth.py  calendar_services.py  server.py  time_utils.py  utils.py
